Styling fixes (fixed CSS for headers of accordion - black text on black background on android, white/while on iphone).

--- a/demos/mobileGallery/css/accordion.css
+++ b/demos/mobileGallery/css/accordion.css
@@ -3,3 +3,11 @@
 	font-family: Times New Roman, Helvetica;
 	color: black;
 }
+
+/* The accordion title are "a" elements. The rule below aims to override the 
+   color specified in the rule for "a" elements in css/themes/android/gallery.css 
+   (and similar for iphone theme), thus restoring the default color from 
+   dojox.mobile themes (all platforms). */
+#accordion .mblAccordionTitleAnchor {
+  color: black;
+}
